--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.632.0",
+    "@aws-sdk/client-sns": "^3.632.0",
+    "@aws-sdk/lib-dynamodb": "^3.632.0",
     "@serverless/typescript": "^3.38.0",
+    "esbuild-plugin-lodash": "^1.2.0",
+    "esbuild-plugin-tsc": "^0.4.0",
+    "install": "^0.13.0",
     "js-yaml": "^4.1.0",
+    "npm": "^10.8.2",
     "serverless": "^3.38.0",
     "serverless-esbuild": "^1.52.1",
     "serverless-iam-roles-per-function": "^3.2.0"
