--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.632.0",
+    "@aws-sdk/client-lambda": "^3.634.0",
     "@aws-sdk/client-sns": "^3.632.0",
+    "@aws-sdk/client-sqs": "^3.632.0",
+    "@aws-sdk/client-sts": "^3.632.0",
     "@aws-sdk/lib-dynamodb": "^3.632.0",
     "@serverless/typescript": "^3.38.0",
+    "dotenv": "^16.4.5",
     "esbuild-plugin-lodash": "^1.2.0",
     "esbuild-plugin-tsc": "^0.4.0",
-    "install": "^0.13.0",
     "js-yaml": "^4.1.0",
     "npm": "^10.8.2",
     "serverless": "^3.38.0",
@@ -23,8 +26,15 @@
     "serverless-iam-roles-per-function": "^3.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/aws-lambda": "^8.10.143",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.4.0",
+    "aws-sdk-client-mock": "^4.0.1",
+    "aws-sdk-client-mock-jest": "^4.0.1",
+    "jest": "^29.7.0",
+    "serverless-export-env": "github:arabold/serverless-export-env",
+    "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
